# Abet-Discord-bot

./: .dockerignore  .env.template  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  bot.py  docker-compose.yml  env.template  logsdocker  main.py  pyproject.toml  requirements.in  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: docker-image.yml  python-app.yml  python-lint.yml
cogs/: AI.py  Admin.py  Fun.py  Genshin.py  Info.py  Math.py  NSFW.py  OpenAI.py  Quotes.py  Roleplay.py  Tools.py  VoiceListen.py  Waifu.py
cogs/utils/: ExchangeRateUSDPHP.py  abet_responses.py  character_limits.py  checks.py  context.py  format.py  genshinutils.py  random_responses.py  reposters.py  responses_random.py  responses_waikei.py  time.py  waifupics.py
database/: migrate_V1_quotes.py  migrate_V2_quotes.py
models/: __init__.py  db.py  engine.py  schema.py
scripts/: attachdocker.sh  logsdocker  logsdocker.sh  restart  restart.sh
